fixed most scaling bugs. Bugs on iphone 6/7/8

--- a/server/public/main.css
+++ b/server/public/main.css
@@ -64,7 +64,6 @@ a {
 
 @media screen and (max-width: 550px) {
   .homeFlex {
-    margin-top: -10%;
     height: 100vh;
     }
   }
@@ -908,3 +907,29 @@ width: 36vw;
   position: absolute;
   top: 0; left: 0; bottom: 0; right: 0;
   }
+
+  /* --- Fixed Footer --- */
+
+  .fixedFooter {
+    display: flex;
+    position: absolute;
+    bottom: 0;
+    justify-content: center;
+    flex-direction: column;
+    font-weight: 300;
+    font-size: 1vw;
+    text-align: center;
+    padding-bottom: 0.5%;
+}
+
+@media screen and (max-width: 1100px) {
+  .fixedFooter {
+    font-size: 2vw;
+  }
+  }
+
+  @media screen and (max-width: 550px) {
+  .fixedFooter {
+    font-size: 2.8vw;
+  }
+  }      
